<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.motechproject</groupId>
    <artifactId>ghana-national</artifactId>
    <name>ghana-national</name>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>ghana-national-core</module>
        <module>ghana-national-xforms</module>
        <module>ghana-national-web</module>
        <module>idgen-omod</module>
        <module>ghana-national-functional-tests</module>
    </modules>
    <properties>
        <spring.version>3.0.5.RELEASE</spring.version>
        <org.ektorp.version>1.1.1</org.ektorp.version>
        <motech-platform.version>0.3-SNAPSHOT</motech-platform.version>
        <threads>1</threads>
        <skip>false</skip>
        <exec-maven-plugin.version>1.1.1</exec-maven-plugin.version>
        <environment>qa</environment>
    </properties>
    <repositories>
        <repository>
            <id>sonatype-repo</id>
            <url>https://repository.sonatype.org/content/groups/forge/</url>
        </repository>
        <repository>
            <id>motech.nexus</id>
            <name>Motech Snapshots Repository</name>
            <url>http://nexus.motechproject.org/content/repositories/snapshots</url>
        </repository>
        <repository>
            <id>openxdata-repo</id>
            <url>https://nexus.openxdata.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>sourceforge-files</id>
            <url>http://globalplatform.sourceforge.net/repo/m2-repository/</url>
        </repository>
        <repository>
            <id>motech-repo</id>
            <name>Motech Maven Repository</name>
            <url>http://nexus.motechproject.org/content/repositories/public</url>
        </repository>
        <repository>
            <id>searls-repo</id>
            <name>Searls Maven Repository</name>
            <url>http://searls-maven-repository.googlecode.com/svn/trunk</url>
        </repository>
    </repositories>
    <dependencies>
        <dependency>
            <groupId>org.openxdata</groupId>
            <artifactId>protocol-api</artifactId>
            <version>1.2</version>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.16</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.6.1</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
            <version>1.6.1</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.6.1</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.0.1</version>
        </dependency>
        <dependency>
            <groupId>ca.uhn.hapi</groupId>
            <artifactId>hapi</artifactId>
            <version>0.5</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-aop</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-aspects</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webmvc</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-core</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-config</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-web</artifactId>
            <version>${spring.version}</version>
        </dependency>
        <dependency>
            <groupId>org.ektorp</groupId>
            <artifactId>org.ektorp</artifactId>
            <version>${org.ektorp.version}</version>
        </dependency>
        <dependency>
            <groupId>org.ektorp</groupId>
            <artifactId>org.ektorp.spring</artifactId>
            <version>${org.ektorp.version}</version>
        </dependency>
        <dependency>
            <groupId>org.motechproject</groupId>
            <artifactId>motech-platform-common</artifactId>
            <version>${motech-platform.version}</version>
        </dependency>
        <dependency>
            <groupId>com.jcraft</groupId>
            <artifactId>jzlib</artifactId>
            <version>1.0.7</version>
        </dependency>
        <dependency>
            <groupId>org.jasypt</groupId>
            <artifactId>jasypt</artifactId>
            <version>1.7</version>
        </dependency>
        <dependency>
            <groupId>commons-digester</groupId>
            <artifactId>commons-digester</artifactId>
            <version>1.8</version>
            <exclusions>
                <exclusion>
                    <artifactId>commons-beanutils</artifactId>
                    <groupId>commons-beanutils</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
            <version>2.6</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.lambdaj</groupId>
            <artifactId>lambdaj</artifactId>
            <version>2.2</version>
        </dependency>
        <!--TEST DEPENDENCIES-->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.8.5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>${spring.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.sourceforge.me4se</groupId>
            <artifactId>me4se</artifactId>
            <scope>test</scope>
            <version>2.1.4-SNAPSHOT-20040926</version>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-core</artifactId>
            <scope>test</scope>
            <version>1.3.RC2</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.web</groupId>
            <artifactId>jsp-impl</artifactId>
            <version>2.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.glassfish.web</groupId>
            <artifactId>jstl-impl</artifactId>
            <version>1.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.1.2</version>
        </dependency>
        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
            <version>1.0.0.GA</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-validator-annotation-processor</artifactId>
            <version>4.1.0.Final</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <!--COMPILER -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <!--SUREFIRE FOR UNIT TESTS-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <argLine>-XX:MaxPermSize=1024M</argLine>
                    <printSummary>true</printSummary>
                    <excludes>
                        <exclude>**/*IT.java</exclude>
                        <exclude>**/repository/*Test.java</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <!--FAILSAFE FOR INTEGRATION TESTS-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.9</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <printSummary>true</printSummary>
                    <includes>
                        <include>**/*IT.java</include>
                        <include>**/repository/*Test.java</include>
                    </includes>
                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
                </configuration>
            </plugin>
            <!--BUILD HELPER-->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>1.7</version>
                <executions>
                    <execution>
                        <id>add-source</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>add-resource</goal>
                        </goals>
                        <configuration>
                            <resources>
                                <resource>
                                    <directory>${project.basedir}/src/main/resources</directory>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
                <version>2.5.1</version>
                <configuration>
                    <aggregate>true</aggregate>
                    <check>
                        <haltOnFailure>false</haltOnFailure>
                        <branchRate>70</branchRate>
                        <totalBranchRate>70</totalBranchRate>
                        <packageBranchRate>70</packageBranchRate>
                    </check>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>cobertura-maven-plugin</artifactId>
                <version>2.5.1</version>
            </plugin>
        </plugins>
    </reporting>
    <!--PROFILES-->
    <profiles>
        <profile>
            <id>emulator</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>com.savage7.maven.plugins</groupId>
                        <artifactId>maven-external-dependency-plugin</artifactId>
                        <version>0.5-SONATYPE-r116</version>
                        <inherited>false</inherited>
                        <configuration>
                            <stagingDirectory>
                                ${project.build.directory}/dependencies/
                            </stagingDirectory>
                            <createChecksum>true</createChecksum>
                            <skipChecksumVerification>false</skipChecksumVerification>
                            <force>false</force>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>motech-mforms</groupId>
                                    <artifactId>motech-mforms-tiny</artifactId>
                                    <version>0.7.0</version>
                                    <packaging>jar</packaging>
                                    <downloadUrl>http://motech.rcg.usm.maine.edu/mForms/{artifactId}-{version}.jar
                                    </downloadUrl>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                        <executions>
                            <execution>
                                <id>clean-external-dependencies</id>
                                <phase>clean</phase>
                                <goals>
                                    <goal>clean-external</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>resolve-install-external-dependencies</id>
                                <phase>test</phase>
                                <goals>
                                    <goal>resolve-external</goal>
                                    <goal>install-external</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>${exec-maven-plugin.version}</version>
                        <dependencies>
                            <dependency>
                                <groupId>motech-mforms</groupId>
                                <artifactId>motech-mforms-tiny</artifactId>
                                <version>0.7.0</version>
                            </dependency>
                        </dependencies>
                        <executions>
                            <execution>
                                <phase>test</phase>
                                <goals>
                                    <goal>java</goal>
                                </goals>
                                <configuration>
                                    <mainClass>org.me4se.MIDletRunner</mainClass>
                                    <classpathScope>test</classpathScope>
                                    <includePluginDependencies>true</includePluginDependencies>
                                    <arguments>
                                        <argument>org.fcitmuk.epihandy.forms.MainForm</argument>
                                        <argument>-width</argument>
                                        <argument>400</argument>
                                        <argument>-height</argument>
                                        <argument>800</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <!--BUILD-NODE-->
        <profile>
            <id>buildNode</id>
            <repositories>
                <repository>
                    <id>motech.nexus</id>
                    <name>Motech Snapshots Repository</name>
                    <url>http://nexus.motechproject.org/content/repositories/snapshots</url>
                    <snapshots>
                        <enabled>true</enabled>
                        <checksumPolicy>warn</checksumPolicy>
                        <updatePolicy>always</updatePolicy>
                    </snapshots>
                </repository>
            </repositories>
        </profile>
    </profiles>
</project>